# Efficient-Sparse-Matrix-Matrix-Multiplication-on-asymmetric-CPUs

./: .start.sh.swp  CMakeLists.txt  README.md  SpMM_codegen.py  amp-CPU  build.sh  code_template_short_gpu_new_fast.py  dev_array.h  generate_matrix.py  start.sh
data/0.8/: 0.smt  1.smt  10.smt  2.smt  3.smt  4.smt  5.smt  6.smt  7.smt  8.smt  9.smt
src/: CMakeLists.txt
src/include/: Originalmat.h  safememory.hpp
src/src/: Originalmat.cpp
test/: CMakeLists.txt  main.cpp
