CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

ADD_DEFINITIONS(-std=c++11)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/src Originalmatlib_src)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/include")

ADD_LIBRARY(Originalmat STATIC ${Originalmatlib_src})
#SET_TARGET_PROPERTIES(Originalmat PROPERTIES OUTPUT_NAME "Originalmat")
