cmake_minimum_required(VERSION 3.0)

SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/test test_src)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/3rdparty/eigen")

LINK_DIRECTORIES("${PROJECT_BINARY_DIR}/lib")

ADD_EXECUTABLE(${PROJECT_NAME} ${test_src})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} libOriginalmat.a)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} pthread)

install(TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR})
